--- a/emacs/readme.org
+++ b/emacs/readme.org
@@ -15,12 +15,6 @@ End sentences with a single space after the full-stop.
 (setq-default sentence-end-double-space nil)
 #+END_SRC
 
-Always confirm before exiting Emacs
-
-#+BEGIN_SRC emacs-lisp
-(setq-default confirm-kill-emacs 'yes-or-no-p)
-#+END_SRC
-
 Disable the default startup screen for Emacs
 
 #+BEGIN_SRC emacs-lisp
@@ -139,6 +133,31 @@ Ensure Emacs opens any URL's in the default browser
 (setq-default browse-url-browser-function 'browse-url-default-macosx-browser)
 #+END_SRC
 
+Always scroll with *compilation* buffer output. This affects things like test run output.  The default is to stay at the top, but I typically want to see the end of the ouput.
+
+#+BEGIN_SRC emacs-lisp
+(setq compilation-scroll-output t)
+#+END_SRC
+
+Turn on ansi-color support in the comint buffer, again for things like test run output. This prevents comint rendering the escape sequences, and instead actually colourises the text.
+
+#+BEGIN_SRC emacs-lisp
+(ansi-color-for-comint-mode-on)
+
+(require 'ansi-color)
+(defun fullybaked/ansi-colorize-buffer ()
+  (let ((buffer-read-only nil))
+    (ansi-color-apply-on-region (point-min) (point-max))))
+(add-hook 'compilation-filter-hook 'fullybaked/ansi-colorize-buffer)
+#+END_SRC
+
+Turn off soft-wrapping of long lines.
+
+#+BEGIN_SRC emacs-lisp
+(global-visual-line-mode 0)
+(setq-default truncate-lines nil)
+#+END_SRC
+
 * Setup =use-package=
 
 Initial configuration for =use-package= is in =init.el=, which ensures it is installed first.
@@ -201,6 +220,40 @@ It's wrapped in a function so you can easily toggle it on or off.
 
 #+END_SRC
 
+* Keybindings with =General=
+Use =general= to handle complex/custom keybindings. Especially handy with =Evil= stuff, like setting a leader key.
+
+[[https://github.com/noctuid/general.el]]
+
+#+BEGIN_SRC emacs-lisp
+(use-package general)
+#+END_SRC
+
+Set up =SPC= as the leader key
+
+#+BEGIN_SRC emacs-lisp
+(general-create-definer my-leader-def :prefix "SPC")
+#+END_SRC
+
+Global keybindings under <Leader> key
+
+#+BEGIN_SRC emacs-lisp
+(my-leader-def
+  :keymaps 'normal
+  "SPC" 'fullybaked/switch-to-previous-buffer
+  "gs" 'magit-status
+  "b" 'counsel-switch-buffer
+  "\\" 'fullybaked/split-window-right-and-switch
+  "-" 'fullybaked/split-window-below-and-switch
+  "tf" 'fullybaked/run-rails-test-file
+  "tn" 'fullybaked/run-rails-test-at-point
+  "gc" 'fullybaked/comment-or-uncomment-region-or-line
+  "w" 'toggle-truncate-lines
+  "rc" 'inf-ruby-console-rails
+  "ir" 'inf-ruby
+)
+#+END_SRC
+
 * UI Preferences
 ** Font
 
@@ -216,10 +269,12 @@ Set the default font to [[https://dank.sh/][=Dank Mono=]] assuming it is install
 
 Load in some themes:
 - [[https://github.com/greduan/emacs-theme-gruvbox][Gruvbox theme]]
+- [[https://github.com/thegeorgeous/railscasts-reloaded-theme][RailsCasts Reloaded]]
 
 #+BEGIN_SRC emacs-lisp
 
 (use-package gruvbox-theme)
+(use-package railscasts-reloaded-theme)
 
 #+END_SRC
 
@@ -227,7 +282,7 @@ Active Gruvbox by default
 
 #+BEGIN_SRC emacs-lisp
 
-(load-theme 'gruvbox-dark-hard t)
+(load-theme 'railscasts-reloaded t)
 
 #+END_SRC
 
@@ -383,197 +438,6 @@ When the point goes outside the window, Emacs tries to center it in the buffer. 
   (moody-replace-vc-mode))
 
 #+END_SRC
-* Org Mode
-** Initialise Org mode
-   Org mode is one of the major draws Emacs had for me. Let's set it up for publishing and task management.
-
-   #+BEGIN_SRC emacs-lisp
-   (use-package org)
-   #+END_SRC
-
-** Heading sizes
-
-   Set up some heading sizes for the bullets. Only dealing with the first three headings as I rarely go more than three deep, and at that level the headings can be the same size.
-
-   I only want the smallest of differences though, luckily Emacs can handle height precision to two decimal places.
-
-   #+BEGIN_SRC emacs-lisp
-   (set-face-attribute 'org-level-1 nil :height 1.2)
-   (set-face-attribute 'org-level-2 nil :height 1.15)
-   (set-face-attribute 'org-level-3 nil :height 1.1)
-   #+END_SRC
-
-** Prettify lists
-
-Use nicer bullets in lists.
-
-#+BEGIN_SRC emacs-lisp
-
-(use-package org-bullets
-  :init
-  (add-hook 'org-mode-hook 'org-bullets-mode))
-
-#+END_SRC
-
-Use a little downward arrow instead of the ellipsis for expanding list items.
-
-#+BEGIN_SRC emacs-lisp
-
-(setq org-ellipsis " ⬎")
-
-#+END_SRC
-
-** Code blocks
-
-Use syntax highlighting when editing in code blocks
-
-#+BEGIN_SRC emacs-lisp
-
-(setq org-src-fontify-natively t)
-
-#+END_SRC
-
-When editing the code block, use the current window instead of opening a new one.
-
-#+BEGIN_SRC emacs-lisp
-
-(setq org-src-window-setup 'current-window)
-
-#+END_SRC
-
-Add an Org mode templace for =emacs-lisp= code blocks, as I predominantly use Org mode for my Emacs configuration. Map this to =<el= for super quick code blocks.
-
-#+BEGIN_SRC emacs-lisp
-
-(add-to-list 'org-structure-template-alist
-  '("el" "#+BEGIN_SRC emacs-lisp\n?\n#+END_SRC"))
-
-#+END_SRC
-** Task lists
-   Set up my task state list
-
-   #+BEGIN_SRC emacs-lisp
-   (setq org-todo-keywords
-      '((sequence "TODO(t)" "WAIT(w)" "|" "DONE(d)" "CANCELED(c)")))
-   #+END_SRC
-
-
-   Store tasks in the =.emacs.d= directory
-
-   #+BEGIN_SRC emacs-lisp
-
-   (setq org-directory "~/.emacs.d/org")
-
-   (defun org-file-path (filename)
-     "Return the absolute address of an org file, given its relative name."
-     (concat (file-name-as-directory org-directory) filename))
-
-   (setq org-inbox-file (org-file-path "inbox.org"))
-   (setq org-index-file (org-file-path "index.org"))
-   (setq org-archive-location
-         (concat (org-file-path "archive.org") "::* From %s"))
-
-   #+END_SRC
-
-   Derive the agenda from the index file
-
-   #+BEGIN_SRC emacs-lisp
-
-   (setq org-agenda-files (list org-index-file))
-
-   #+END_SRC
-
-   Hitting =C-c C-x C-s= marks the task as done and moves to archive.
-
-   #+BEGIN_SRC emacs-lisp
-
-   (defun fullybaked/mark-done-and-archive ()
-     "Mark the state of an org-mode item as DONE and archive it."
-     (interactive)
-     (org-todo 'done)
-     (org-archive-subtree))
-
-   (define-key org-mode-map (kbd "C-c C-x C-s") 'fullybaked/mark-done-and-archive)
-
-   #+END_SRC
-
-   Record when the task was archived.
-
-   #+BEGIN_SRC emacs-lisp
-
-   (setq org-log-done 'time)
-
-   #+END_SRC
-
-*** Capture Templates
-
-Define a few common tasks as capture templates.
-
-#+BEGIN_SRC emacs-lisp
-(setq org-capture-templates
-      '(("t" "Todo"
-         entry
-         (file+headline org-index-file "Inbox")
-         "* TODO %?\n")))
-#+END_SRC
-
-When starting an Org capture, I typically want to be in insert mode right off the bat, so let's do that.
-
-#+BEGIN_SRC emacs-lisp
-(add-hook 'org-capture-mode-hook 'evil-insert-state)
-#+END_SRC
-
-*** Keybindings
-
-A few handy keys
-
-#+BEGIN_SRC emacs-lisp
-
-(define-key global-map "\C-cl" 'org-store-link)
-(define-key global-map "\C-ca" 'org-agenda)
-(define-key global-map "\C-cc" 'org-capture)
-
-#+END_SRC
-
-Quickly open the task list
-
-#+BEGIN_SRC emacs-lisp
-
-(defun fullybaked/open-index-file ()
-  "Open the master org TODO list."
-  (interactive)
-  (find-file org-index-file)
-  (end-of-buffer))
-
-#+END_SRC
-
-Use =M-n= to capture a new task
-
-#+BEGIN_SRC emacs-lisp
-
-(defun org-capture-todo ()
-  (interactive)
-  (org-capture :keys "t"))
-
-(global-set-key (kbd "M-n") 'org-capture-todo)
-
-#+END_SRC
-
-** Export to HTML
-
-#+BEGIN_SRC emacs-lisp
-
-(use-package htmlize)
-
-#+END_SRC
-
-** Export to Twitter Bootstrap formatted HTML
-
-#+BEGIN_SRC emacs-lisp
-
-(use-package ox-twbs)
-
-#+END_SRC
 * Utility functions
 Some handy functions for various tasks in the rest of my configuration or just general use.
 
@@ -631,6 +495,7 @@ Some handy functions for various tasks in the rest of my configuration or just g
 #+END_SRC
 
 * Features
+
 ** Vim using =Evil=
 Use =evil=
 
@@ -672,13 +537,13 @@ Use evil with Org agendas.
   (evil-org-agenda-set-keys))
 #+END_SRC
 
-Use =evil-escape= and bind it to =jk=.
+Use =evil-escape= and bind it to =jj=.
 
 #+BEGIN_SRC emacs-lisp
 (use-package evil-escape
   :config
-  (setq-default evil-escape-key-sequence "jk")
-  (setq-default evil-escape-delay 0.1)
+  (setq-default evil-escape-key-sequence "jj")
+  (setq-default evil-escape-delay 0.2)
   (evil-escape-mode))
 #+END_SRC
 
@@ -830,9 +695,9 @@ Open the current branches PR on Github
   ("C-c v" . 'projectile-ag)
 
   :config
-  (define-key evil-normal-state-map (kbd "C-p") 'projectile-find-file)
-  (evil-define-key 'motion ag-mode-map (kbd "C-p") 'projectile-find-file)
-  (evil-define-key 'motion rspec-mode-map (kbd "C-p") 'projectile-find-file)
+  (define-key evil-normal-state-map (kbd "C-f") 'projectile-find-file)
+  (evil-define-key 'motion ag-mode-map (kbd "C-f") 'projectile-find-file)
+  (evil-define-key 'motion rspec-mode-map (kbd "C-f") 'projectile-find-file)
 
   (setq projectile-completion-system 'ivy)
   (setq projectile-switch-project-action 'projectile-dired)
@@ -848,7 +713,7 @@ Use projectile everywhere
 
 #+END_SRC
 ** Directories with =dired=
-   Hide dotfiles by default, toggle them with =.=
+Hide dotfiles by default, toggle them with =.=
 
 #+BEGIN_SRC emacs-lisp
 (use-package dired-hide-dotfiles
@@ -878,7 +743,7 @@ Use =j= and =k= to move around in =dired=
 Locate snippet files in =~/.emacs/snippets/text-mode=, but this /should/ be symlinked in from the dotfiles repo. Then enabled it globally.  It can be turned off in the places I don't want it.
 
 #+BEGIN_SRC emacs-lisp
-(setq yas-snippet-dirs '("~/.emacs.d/snippets/text-mode"))
+(setq yas-snippet-dirs '("~/.emacs.d/snippets"))
 (yas-global-mode 1)
 #+END_SRC
 
@@ -887,45 +752,223 @@ Don't let =yasnippet= try to indent the snippet, this can go wrong in some situa
 #+BEGIN_SRC emacs-lisp
 (setq yas/indent-line nil)
 #+END_SRC
-* Keybindings with =General=
-Use =general= to handle complex/custom keybindings. Especially handy with =Evil= stuff, like setting a leader key.
+* Org Mode
+** Initialise Org mode
+   Org mode is one of the major draws Emacs had for me. Let's set it up for publishing and task management.
+
+   #+BEGIN_SRC emacs-lisp
+   (use-package org)
+   #+END_SRC
+
+** Heading sizes
+
+   Set up some heading sizes for the bullets. Only dealing with the first three headings as I rarely go more than three deep, and at that level the headings can be the same size.
+
+   I only want the smallest of differences though, luckily Emacs can handle height precision to two decimal places.
+
+   #+BEGIN_SRC emacs-lisp
+   (set-face-attribute 'org-level-1 nil :height 1.2)
+   (set-face-attribute 'org-level-2 nil :height 1.15)
+   (set-face-attribute 'org-level-3 nil :height 1.1)
+   #+END_SRC
+
+** Prettify lists
+
+Use nicer bullets in lists.
 
 #+BEGIN_SRC emacs-lisp
-(use-package general)
+
+(use-package org-bullets
+  :init
+  (add-hook 'org-mode-hook 'org-bullets-mode))
+
 #+END_SRC
 
-Set up =SPC= as the leader key
+Use a little downward arrow instead of the ellipsis for expanding list items.
 
 #+BEGIN_SRC emacs-lisp
-(general-create-definer my-leader-def :prefix "SPC")
+
+(setq org-ellipsis " ⬎")
+
 #+END_SRC
 
-Global keybindings under <Leader> key
+** Code blocks
+
+Use syntax highlighting when editing in code blocks
 
 #+BEGIN_SRC emacs-lisp
-(my-leader-def
-  :keymaps 'normal
-  "SPC" 'fullybaked/switch-to-previous-buffer
-  "gs" 'magit-status
-  "b" 'counsel-switch-buffer
-  "\\" 'fullybaked/split-window-right-and-switch
-  "-" 'fullybaked/split-window-below-and-switch
-  "tf" 'fullybaked/run-rails-test-file
-  "tn" 'fullybaked/run-rails-test-at-point
-  "gc" 'fullybaked/comment-or-uncomment-region-or-line
-)
+
+(setq org-src-fontify-natively t)
+
 #+END_SRC
 
-Set up leader keys to jump between headlines in Org-mode, <Leader>p and <Leader>n to jump (p)revious and (n)ext headlines
+When editing the code block, use the current window instead of opening a new one.
 
 #+BEGIN_SRC emacs-lisp
-(my-leader-def
-  :states 'normal
-  :keymaps 'org-mode-map
-  "p" 'org-previous-visible-heading
-  "n" 'org-next-visible-heading
-)'normal
+
+(setq org-src-window-setup 'current-window)
+
 #+END_SRC
+
+Add an Org mode templace for =emacs-lisp= code blocks, as I predominantly use Org mode for my Emacs configuration. Map this to =<el= for super quick code blocks.
+
+#+BEGIN_SRC emacs-lisp
+
+(add-to-list 'org-structure-template-alist
+  '("el" "#+BEGIN_SRC emacs-lisp\n?\n#+END_SRC"))
+
+#+END_SRC
+** Task lists
+   Set up my task state list
+
+   #+BEGIN_SRC emacs-lisp
+   (setq org-todo-keywords
+      '((sequence "TODO(t)" "WAIT(w)" "IN PROGRESS(i)" "|" "DONE(d)" "CANCELED(c)")))
+   #+END_SRC
+
+   Lets open agenda in Emacs mode, as Evil overrides useful keys for navigating
+
+#+BEGIN_SRC emacs-lisp
+(evil-set-initial-state 'org-agenda-mode 'emacs)
+#+END_SRC
+
+Attempt at controlling agenda in Evil way, currently commented out until I get it to work properly
+
+#+BEGIN_SRC emacs-lisp
+;;(general-define-key
+  ;;:keymaps '(org-agenda-mode local)
+  ;;"q" 'org-agenda-quit
+  ;;"gj" 'org-agenda-goto-date
+  ;;"go" 'org-agenda-open-link
+  ;;"n" 'org-agenda-add-note
+  ;;"w" 'org-agenda-week-view
+  ;;"d" 'org-agenda-day-view
+  ;;"f" 'org-agenda-later
+  ;;"b" 'org-agenda-earlier
+  ;;"s" 'org-agenda-schedule
+  ;;"+" 'org-agenda-priority-up
+  ;;"," 'org-agenda-priority
+  ;;"-" 'org-agenda-priority-down
+  ;;"t" 'org-todo)
+#+END_SRC
+
+   Store tasks in the =.emacs.d= directory
+
+   #+BEGIN_SRC emacs-lisp
+
+   (setq org-directory "~/.emacs.d/org")
+
+   (defun org-file-path (filename)
+     "Return the absolute address of an org file, given its relative name."
+     (concat (file-name-as-directory org-directory) filename))
+
+   (setq org-inbox-file (org-file-path "inbox.org"))
+   (setq org-index-file (org-file-path "index.org"))
+   (setq org-archive-location
+         (concat (org-file-path "archive.org") "::* From %s"))
+
+   #+END_SRC
+
+   Derive the agenda from the index file
+
+   #+BEGIN_SRC emacs-lisp
+
+   (setq org-agenda-files (list org-index-file))
+
+   #+END_SRC
+
+   Hitting =C-c C-x C-s= marks the task as done and moves to archive.
+
+   #+BEGIN_SRC emacs-lisp
+
+   (defun fullybaked/mark-done-and-archive ()
+     "Mark the state of an org-mode item as DONE and archive it."
+     (interactive)
+     (org-todo 'done)
+     (org-archive-subtree))
+
+   (define-key org-mode-map (kbd "C-c C-x C-s") 'fullybaked/mark-done-and-archive)
+
+   #+END_SRC
+
+   Record when the task was archived.
+
+   #+BEGIN_SRC emacs-lisp
+
+   (setq org-log-done 'time)
+
+   #+END_SRC
+
+*** Capture Templates
+
+Define a few common tasks as capture templates.
+
+#+BEGIN_SRC emacs-lisp
+(setq org-capture-templates
+      '(("t" "Todo"
+         entry
+         (file+headline org-index-file "Inbox")
+         "* TODO %?\n")))
+#+END_SRC
+
+When starting an Org capture, I typically want to be in insert mode right off the bat, so let's do that.
+
+#+BEGIN_SRC emacs-lisp
+(add-hook 'org-capture-mode-hook 'evil-insert-state)
+#+END_SRC
+
+*** Keybindings
+
+A few handy keys
+
+#+BEGIN_SRC emacs-lisp
+
+(define-key global-map "\C-cl" 'org-store-link)
+(define-key global-map "\C-ca" 'org-agenda)
+(define-key global-map "\C-cc" 'org-capture)
+
+#+END_SRC
+
+Quickly open the task list
+
+#+BEGIN_SRC emacs-lisp
+
+(defun fullybaked/open-index-file ()
+  "Open the master org TODO list."
+  (interactive)
+  (find-file org-index-file)
+  (end-of-buffer))
+
+#+END_SRC
+
+Use =M-n= to capture a new task
+
+#+BEGIN_SRC emacs-lisp
+
+(defun org-capture-todo ()
+  (interactive)
+  (org-capture :keys "t"))
+
+(global-set-key (kbd "M-n") 'org-capture-todo)
+
+#+END_SRC
+
+** Export to HTML
+
+#+BEGIN_SRC emacs-lisp
+
+(use-package htmlize)
+
+#+END_SRC
+
+** Export to Twitter Bootstrap formatted HTML
+
+#+BEGIN_SRC emacs-lisp
+
+(use-package ox-twbs)
+
+#+END_SRC
+
 * Custom keybindings
 
 #+BEGIN_SRC emacs-lisp
@@ -937,7 +980,7 @@ Set up leader keys to jump between headlines in Org-mode, <Leader>p and <Leader>
 #+END_SRC
 
 * Terminal setup
-Use =multi-term= to manage shell sessions and bind it to =C-c t=
+Use =multi-term= to manage shell sessions and bind it to =C-c t=.  Generally, I want to use tmux as well so let's either start or connect to the session for the current working directory.
 
 #+BEGIN_SRC emacs-lisp
 (use-package multi-term)
@@ -947,7 +990,7 @@ Use =multi-term= to manage shell sessions and bind it to =C-c t=
 Use =zsh= for the shell
 
 #+BEGIN_SRC emacs-lisp
-(setq multi-term-program-switches "--login")
+(setq multi-term-program "/bin/zsh")
 #+END_SRC
 
 Let's not use Evil mode on the terminal. I don't use the vi bindings normally, so won't use them in Emacs-Terminal either.
@@ -956,23 +999,67 @@ Let's not use Evil mode on the terminal. I don't use the vi bindings normally, s
 (evil-set-initial-state 'term-mode 'emacs)
 #+END_SRC
 
+Even though we have set the Emacs keybindings, I acutally want some of the shell bindings I am used to. The terminal maintains it's own keybinding lists, so we need to modify them.
+
+Unbind some of the Emacs type keys:
+
+#+BEGIN_SRC emacs-lisp
+(defcustom term-unbind-key-list
+  '("C-z" "C-x" "C-c" "C-h" "C-y" "<ESC>")
+  "The key list that will need to be unbind."
+  :type 'list
+  :group 'multi-term)
+#+END_SRC
+
+Bind the motion and control keys that are common to the shell:
+
+#+BEGIN_SRC emacs-lisp
+(defcustom term-bind-key-alist
+  '(
+    ("C-c C-c" . term-interrupt-subjob)
+    ("C-p" . previous-line)
+    ("C-n" . next-line)
+    ("C-s" . isearch-forward)
+    ("C-r" . isearch-backward)
+    ("C-m" . term-send-raw)
+    ("M-f" . term-send-forward-word)
+    ("M-b" . term-send-backward-word))
+  "The key alist that will need to be bind.
+If you do not like default setup, modify it, with (KEY . COMMAND) format."
+  :type 'alist
+  :group 'multi-term)
+#+END_SRC
+
 - Fix pasting in the terminal.  Yanking in =term-mode= doesn't quite work, the text appears in the buffer but isn't sent to the shell. Correctly bind =C-y= to yank how we'd expect.
 - Bind =M-o= to switch to the other window
 - Turn off =yasnippet= as I want the shell to do it's own tab-completion
+- =M-[= and =M-]= to switch through active terminal buffers
 
 #+BEGIN_SRC emacs-lisp
-(defun fullybaked/term-paste (&optional string)
-  (interactive)
-  (process-send-string
-   (get-buffer-process (current-buffer))
-   (if string string (current-kill 0))))
-
 (add-hook 'term-mode-hook
           (lambda ()
             (goto-address-mode)
-            (define-key term-raw-map (kbd "C-y") 'fullybaked/term-paste)
+            (add-to-list 'term-bind-key-alist '("M-[" . multi-term-prev))
+            (add-to-list 'term-bind-key-alist '("M-]" . multi-term-next))
+            (define-key term-raw-map (kbd "C-y") 'term-paste)
             (define-key term-raw-map (kbd "M-o") 'other-window)
             (setq yas-dont-activate t)))
+#+END_SRC
+
+Let's have a bigger history in the terminal buffer, by default it is only 2048 lines.  You /could/ set it to 0 for unlimited, but it could crush Emacs performance. I've chosen 10'000 for now and will tweak upwards if performance seems good and if it seems necessary.
+
+#+BEGIN_SRC emacs-lisp
+(add-hook 'term-mode-hook
+          (lambda ()
+            (setq term-buffer-maximum-size 10000)))
+#+END_SRC
+
+Turn off a couple of minor modes that aren't so useful in a terminal
+
+#+BEGIN_SRC emacs-lisp
+(add-hook 'term-mode-hook
+          (lambda ()
+            (setq show-trailing-whitespace nil)))
 #+END_SRC
 
 * Languages
@@ -988,31 +1075,49 @@ I use =rbenv= to manage my local Ruby and RubyGems so lets configure Emacs to kn
 
 #+END_SRC
 
-Running tests from within Emacs is awesome, but...
+Running tests from within Emacs is awesome,
 
 #+BEGIN_SRC emacs-lisp
 (use-package ruby-test-mode)
+(add-hook 'ruby-mode-hook 'ruby-test-mode)
 #+END_SRC
 
-the =ruby-test-mode= doesn't take into account newer versions a Rails so,
+but... the =ruby-test-mode= doesn't take into account newer versions a Rails for test nearest. Instead of using regex for the name of the nearest test let's use explicit line numbers.
 
 #+BEGIN_SRC emacs-lisp
+(defun fullybaked/test-command(filename)
+  "Return the test command to use for Ruby tests based on the file suffix, either _spec.rb or _test.rb"
+  (interactive)
+  (if (eq nil (string-match "_test.rb$" filename)) "rails spec" "rails test"))
+
 (defun fullybaked/run-rails-test-file()
   "Run current test file through the rails command"
   (interactive)
   (let ((filename (ruby-test-find-file)))
-    (compile (format "bundle exec rails test %s" filename))))
+    (compile (format "bundle exec %s %s" (fullybaked/test-command filename) filename))))
 
-(defun run-rails-test-at-point ()
+(defun fullybaked/run-rails-test-at-point ()
   "Run the closest test to the line number of the point, don't use a regex to guess the name, just pass the rails command the actual line number"
   (interactive)
   (let* ((filename (ruby-test-find-file))
          (buffername (get-file-buffer filename)))
     (with-current-buffer buffername
       (let ((line (line-number-at-pos (point))))
-        (compile (format "bundle exec rails test %s:%s" filename line))))
+        (compile (format "bundle exec %s %s:%s" (fullybaked/test-command filename) filename line))))
     )
   )
+#+END_SRC
+
+Dealing with the compilation buffers that are opened by the test runner can be a pain. This hook makes it a bit simpler by switching to the =*compilation*= buffer at the end of the run, and binding =q= to close it.
+
+#+BEGIN_SRC emacs-lisp
+(add-hook 'compilation-finish-functions
+          (lambda (buf strg)
+            (switch-to-buffer-other-window "*compilation*")
+            (read-only-mode)
+            (goto-char (point-max))
+            (local-set-key (kbd "q")
+                           (lambda () (interactive) (quit-restore-window)))))
 #+END_SRC
 
 Use =projectile-rails= for some helpers
@@ -1025,14 +1130,12 @@ Use =projectile-rails= for some helpers
   (projectile-rails-global-mode))
 #+END_SRC
 
+Embed an =irb= console in Emacs for easier access without using the Terminal.
+
 #+BEGIN_SRC emacs-lisp
-(add-hook 'ruby-mode-hook
-          (lambda ()
-            (setq ruby-insert-encoding-magic-comment nil)
-            (ruby-test-mode)
-            (flycheck-mode)
-            (local-set-key "\r" 'newline-and-indent)
-            (define-key ruby-mode-map (kbd "C-c C-c") 'xmp)))
+(use-package inf-ruby
+  :config
+  (add-hook 'ruby-mode-hook 'inf-ruby-minor-mode))
 #+END_SRC
 
 Associate Ruby with certain files that don't typically have a =rb= extension
@@ -1045,6 +1148,26 @@ Associate Ruby with certain files that don't typically have a =rb= extension
  "\\.gemspec$"
  "\\Guardfile$"
  "\\Rakefile$")
+#+END_SRC
+
+Add some custom key words to the syntax highlighting
+
+#+BEGIN_SRC emacs-lisp
+(defvar ruby-mode-keywords
+  '(("describe|assert_equal|assert_difference" . font-lock-keyword-face)))
+
+(font-lock-add-keywords 'ruby-mode ruby-mode-keywords)
+(font-lock-add-keywords 'ruby-test-mode ruby-mode-keywords)
+
+#+END_SRC
+
+Enhanced Ruby mode
+
+#+BEGIN_SRC emacs-lisp
+(use-package enh-ruby-mode
+  :config
+  (add-to-list 'auto-mode-alist
+    '("\\(?:\\.rb\\|ru\\|rake\\|thor\\|jbuilder\\|gemspec\\|podspec\\|/\\(?:Gem\\|Rake\\|Cap\\|Thor\\|Vagrant\\|Guard\\|Pod\\)file\\)\\'" . enh-ruby-mode)))
 #+END_SRC
 ** Web Mode
 #+BEGIN_SRC emacs-lisp
@@ -1124,6 +1247,13 @@ Show documentation when writing Emacs Lisp
   (add-hook 'emacs-lisp-mode-hook 'eldoc-mode))
 #+END_SRC
 
+* Misc
+Look for executables in =/usr/local/bin=
+
+#+BEGIN_SRC emacs-lisp
+(fullybaked/append-to-path "/usr/local/bin")
+#+END_SRC
+
 * Resources
 
 List of the resources I used as I learned about Emacs and how this config file was put together.
@@ -1145,3 +1275,5 @@ List of the resources I used as I learned about Emacs and how this config file w
 [[https://github.com/angrybacon/dotemacs/blob/master/dotemacs.org][AngryBacon - DotEmacs config]]
 
 [[https://sam217pa.github.io/2016/09/23/keybindings-strategies-in-emacs/][Samuel Barreto - Keybinding Stategies in Emacs]]
+
+[[http://rawsyntax.com/blog/learn-emacs-zsh-and-multi-term/][Emacs multi-term & ZSH playing nicely]]
